# calc24

./: Calc24.java  Calc24.kts  LICENSE  README.md  calc24.go  calc24.hs  calc24.kts  calc24.py  flake.nix  verify.py
cpp/: calc24.cpp  calc24_expr_eval.cc
go/: calc24.go  calc24_expr_eval.go  calc24_mt.go
haskell/: calc24.cabal  calc24.hs  package.yaml
haskell/app/: Main.hs
haskell/src/: Calc24.hs
haskell/test/: Spec.hs
java/: Calc24.kts
python/: calc24.py
roc/: Calc24.roc  main.roc
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/tests/: tests.rs
zig/: calc24.zig  calc24_comptime.zig  calc24_static.zig  test_calc24.zig  test_calc24_comptime.zig
