cabal-version: 3.8

name:           calc24
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/megakilo/calc24#readme>
homepage:       https://github.com/megakilo/calc24#readme
bug-reports:    https://github.com/megakilo/calc24/issues
author:         Steven Chen
maintainer:     megakilo@gmail.com
copyright:      2021 Steven Chen
license:        MIT
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/megakilo/calc24

library
  exposed-modules:
      Calc24
  other-modules:
      Paths_calc24
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable calc24-exe
  main-is: Main.hs
  other-modules:
      Paths_calc24
  hs-source-dirs:
      app
  ghc-options: -rtsopts
  build-depends:
      base >=4.7 && <5
    , calc24
    , random
  default-language: Haskell2010

test-suite calc24-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_calc24
  hs-source-dirs:
      test
  ghc-options: -rtsopts
  build-depends:
      base >=4.7 && <5
    , hint
    , hspec
    , calc24
  default-language: Haskell2010
